--- a/Real_Estate/pom.xml
+++ b/Real_Estate/pom.xml
@@ -5,9 +5,10 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.15-SNAPSHOT</version>
+		<version>2.7.14</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.pms</groupId>
 	<artifactId>RealEstate</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
