--- a/Real_Estate/src/main/resources/application.properties
+++ b/Real_Estate/src/main/resources/application.properties
@@ -5,6 +5,9 @@ server.port=8585
 #to add viewresolver
 #spring.mvc.view.prefix=/WEB-INF/views/
 #spring.mvc.view.suffix=.jsp
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-request-size=10MB
 
 
 
@@ -12,8 +15,8 @@ server.port=8585
 spring.datasource.url = jdbc:mysql://localhost:3306/abc?useSSL=false
 #&serverTimezone=UTC&useLegacyDatetimeCode=false&zeroDateTimeBehavior=CONVERT_TO_NULL
 spring.datasource.username=root
-spring.datasource.password=Kunal@123
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=lalit76342
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
